fixed some layout issues

--- a/style.css
+++ b/style.css
@@ -300,6 +300,7 @@ HEADER
 }
 
 .navbar-brand img {
+	height: 50px;
     margin: 0 !important;
 }
 
@@ -418,6 +419,12 @@ HEADER
 
 .iconitem a {
     padding-left: 8px !important;
+}
+
+.keepaspect {
+	display: block;
+	width: 100%;
+	height: auto;
 }
 
 
@@ -547,6 +554,9 @@ MEGA MENU
     text-transform: capitalize;
 }
 
+.dropdown-image {
+	width: 100px;
+}
 
 /******************************************
 PAGES
@@ -2053,35 +2063,31 @@ MICS
 }
 
 #preloader {
-    width: 100%;
-    height: 100%;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    background: #fff;
-    z-index: 11000;
-    position: fixed;
-    display: block
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  z-index: 1;
+  width: 150px;
+  height: 150px;
+  margin: -75px 0 0 -75px;
+  border: 16px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 16px solid #3498db;
+  width: 120px;
+  height: 120px;
+  -webkit-animation: spin 2s linear infinite;
+  animation: spin 2s linear infinite;
 }
 
-.preloader {
-    position: absolute;
-    margin: 0 auto;
-    left: 1%;
-    right: 1%;
-    top: 47%;
-    width: 65px;
-    height: 65px;
-    background: center center no-repeat none;
-    background-size: 65px 65px;
-    -webkit-border-radius: 50%;
-    -moz-border-radius: 50%;
-    -ms-border-radius: 50%;
-    -o-border-radius: 50%;
-    border-radius: 50%
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
 }
 
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
 
 /******************************************
 COLOR BLUE
